recursion.cons.increasing.Increasing.scala.error
Compilation error:
Increasing:18: error: illegal start of simple expression
  }
  ^